PVWEB-914 | fix | add with to dropdown option for background highlighting on tablet and mobile

--- a/components/atoms/FormComponents/PvSelect/PvSelect.scss
+++ b/components/atoms/FormComponents/PvSelect/PvSelect.scss
@@ -147,6 +147,7 @@
     @apply tw-py-3 tw-px-4;
     @apply tw-leading-6;
     @apply tw-flex tw-gap-2;
+    @apply tw-w-fit;
   }
 
   &__dropdown-option {
